--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,16 @@
     <string name="call">GỌI</string>
     <string name="message">NHẮN TIN</string>
     <string name="block">CHẶN</string>
+    <string name="save_contact">LƯU</string>
     <string name="default_country">default nation</string>
     <string name="default_network">default network</string>
+    <string name="block_setting">Cài đặt chặn số</string>
+    <string name="block_setting_advertising">Chặn các số quảng cáo</string>
+    <string name="block_setting_foreign_number">Chặn các số nước ngoài</string>
+    <string name="block_setting_out_contact">Chặn các số không có trong danh bạ</string>
+    <string name="block_setting_scam">Chặn các số lừa đảo</string>
+    <string name="block_number">Chặn số</string>
+    <string name="block_name">Tên</string>
+    <string name="block_description">Mô tả</string>
+    <string name="block_option">Lựa chọn:</string>
 </resources>
