--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,9 @@
     <string name="update_list_block_time">Lần cập nhật cuối cùng</string>
     <string name="setting_eng">Setting</string>
     <string name="title_activity_test_call_activiry">TestCallActiviry</string>
+    <string name="delete_content">Bạn có chắc muốn xóa liên hệ này không?</string>
+    <string name="delete_vie">Xóa</string>
+    <string name="cancel_vie">Hủy</string>
     <!--
     This string is used for square devices and overridden by hello_world in
     values-round/strings.xml for round devices.
